<resources>
	<string name="app_name">DWGC ADMIN</string>
    <string name="contact_email">andronekomimi@gmail.com</string> <!-- A CHANGER !!! -->
    <string name="project">Projets</string>
    <string name="workshops">Ateliers</string>
    <string name="tuto">Tutoriels</string>
    <string name="registration">Inscriptions</string>
    <string name="users">Utilisateurs</string>
    <!-- admin -->
    <string name="show">Voir</string>
    <string name="add">Ajouter</string>
    <!-- ajout dun atelier -->
    <string name="theme">Thème</string>
    <string name="hostname">Hôte</string>
    <string name="address">Adresse</string>
    <string name="town">Ville</string>
    <string name="date">Date</string>
    <string name="capacity">Capacité</string>
    <string name="registered">Inscrits</string>
    <string name="price">Prix</string>
    <!-- edition dun atelier -->
    <string name="edit">Edit</string>
    <string name="save">Enregistrer</string>
    <string name="del">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="back">Retour à la liste</string>
    <!-- ajout dun user -->
    <string name="firstname">Prénom</string>
    <string name="name">Nom</string>
    <string name="phone">N° de tél</string>
    <string name="email">Email</string>
    <string name="partener">Filleule</string>
    <string name="host">Hôtesse</string>
    <!-- ajout dun tuto -->
    <string name="title">Titre</string>
    <string name="upload_date">Date de mise en ligne</string>
    <string name="availability">Disponobilité</string>
    <string name="available">disponible</string>
    <string name="not_available">à la demande</string>
    <string name="waiting_file">Fichier en attente</string>
    <string name="choose_file">Choisir le fichier (jpeg de taille inférieur à 1Mo)</string>
    <string name="nbr_demand">Nombre de demande</string>
    <!-- gestion des projets -->
    <string name="submit_date">Date de soumission</string>
    <string name="order_date">Date de livraison souhaitée</string>
    <string name="project_type">Type de projet</string>
    <string name="how_many_cards">Combien de cartes</string>
    <string name="file">Fichier joint</string>
    <string name="infos">Infos complémentaires</string>
    <string name="project_name">Nom du projet</string>
    <string name="for_when">Pour quand ?</string>
    <string name="selected_colors">Couleurs choisies</string>
    <string name="to_put_on_card">Afficher sur la carte</string>
    <string name="age">Age</string>
    <string name="perso">Personalisation</string>
    <string name="maj">MAJ statut</string>
    <string name="upload_proto">Charger proto</string>
    <!-- inscription -->
    <string name="inscription_date">Date de demande</string>
    <string name="workshop">Atelier</string>
    <string name="nbr_participant">Nombre d\'inscrits</string>
    <string name="name_firstname">Nom et prénom</string>
    <string name="level">Niveau d\'expertise</string>
    <string name="see_wk">(Voir Atelier)</string>
    <string name="insc_status">Statut de l\'inscription</string>
    <string name="btn_send_invit">Inviter</string>
    <string name="btn_send_wk_complet">Complet</string>
    <string name="btn_validate">Valider</string>
    <string name="email_subject_inscription">[DWGetCrafty] Demande d\'inscription à l\'atelier %1$s</string>
    <string name="email_body_invit">Bonjour,\n\nMerci pour votre demande d\'inscription. Le déroulement d\'un atelier est le suivant :----------- prix : %1$s ---------------\n\nA bientôt!\nTeam DWGetCrafty</string>
    <string name="email_body_complet">Bonjour,\n\nMerci pour votre demande d\'inscription. Malheureusement cet atelier est complet. Mais nous tenons compte de votre intérêt. Rien n\'est perdu, on remettra ça.\n----------- a compléter ---------------\n\nA bientôt!\nTeam DWGetCrafty</string>
    <string name="email_body_validate">Bonjour,\n\nMerci pour votre confirmation d\'inscription. Ce dernier aura lieu le %1$s à %2$s.\n Notre charmante hôtesse, %3$s, nous recevra à l\'adresse suivante : %4$s (%5$s).\n----------- a compléter ---------------\n\nA bientôt!\nTeam DWGetCrafty</string>
    
    <!-- ARRAYS -->
    <string-array name="status_arrays">
        <item>Projet soumis</item>
        <item>Projet accepté</item>
        <item>Projet refusé</item>
        <item>Prototype en cours</item>
        <item>Prototype en attente de validation</item>
        <item>Prototype accepté</item>
        <item>Prototype refusé</item>
        <item>Réalisation en cours</item>
        <item>Réalisation terminée</item>
    </string-array>

</resources>