<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address" />

    <CheckBox
        android:id="@+id/partener"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/partener"/>

     <CheckBox
        android:id="@+id/host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/host"/>

    <Button
        android:id="@+id/add"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>