<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/tutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startTutorialAdminActivity"
        android:text="@string/tuto" />

     <Button
        android:id="@+id/workshop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startWorkshopAdminActivity"
        android:text="@string/workshops" />
     
      <Button
        android:id="@+id/projects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startProjectAdminActivity"
        android:text="@string/project" />
    
     <Button
        android:id="@+id/registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startRegistrationAdminActivity"
        android:text="@string/registration" />
     
      <Button
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startUserAdminActivity"
        android:text="@string/users" />
     
</LinearLayout>