<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

        <Button
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_date" />

        <RadioGroup
            android:id="@+id/availability"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/available"
                android:checked="true"
                android:text="@string/available" />

            <RadioButton
                android:id="@+id/not_available"
                android:text="@string/not_available" />
        </RadioGroup>

        <Button
            android:id="@+id/choose_file"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_file" />
        
        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/choose_file" />

        <Button
            android:id="@+id/add"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>

</ScrollView>