<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/file"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:maxWidth="18dp"
        android:src="@drawable/host" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/file"
        android:text="@string/address" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/file"
        android:layout_below="@id/title"
        android:text="@string/town" />

    <TextView
        android:id="@+id/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/file"
        android:layout_below="@id/date"
        android:text="@string/app_name" />

</RelativeLayout>